--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <div>
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="/">Kezdőlap</a></li>
-        <li class="nav-item"><a class="nav-link" href="/rolunk">Rólunk</a></li>
+        <li class="nav-item"><a class="nav-link" href="/rolunk">Rólam</a></li>
         <li class="nav-item"><a class="nav-link" href="/szolgaltatasok">Szolgáltatások</a></li>
         <li class="nav-item"><a class="nav-link" href="/kapcsolat">Kapcsolat</a></li>
       </ul>
