Fix comment syntax in index.html template

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,9 +23,9 @@
 
 
 
-
-#{% extends 'base.html' %}
-#{% block content %}
-#<h1>Alapozó Fejlesztés és Iskolaelőkészítő – Tatabánya</h1><p>Gyógypedagógusként lehetőséget kaptam arra, hogy hátrányos helyzetű gyermekekkel foglalkozzak, ami a hivatásom lett. A munkám során fontosnak tartom, hogy a gyermekek teljes személyiségét megismerve, rájuk igazítva tartsam meg a foglalkozásokat. Hiszem, hogy a gyermek és a szülő közös munkája nélkülözhetetlen az egység és a harmonikus fejlődés érdekében.</p>
-#{% endblock %}
-
+{#
+{% extends 'base.html' %}
+{% block content %}
+<h1>Alapozó Fejlesztés és Iskolaelőkészítő – Tatabánya</h1><p>Gyógypedagógusként lehetőséget kaptam arra, hogy hátrányos helyzetű gyermekekkel foglalkozzak, ami a hivatásom lett. A munkám során fontosnak tartom, hogy a gyermekek teljes személyiségét megismerve, rájuk igazítva tartsam meg a foglalkozásokat. Hiszem, hogy a gyermek és a szülő közös munkája nélkülözhetetlen az egység és a harmonikus fejlődés érdekében.</p>
+{% endblock %}
+#}
