Update image source in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     
     <!-- BAL OLDALT KÉP -->
     <div class="col-md-5 text-center">
-      <img src="{{ url_for('static', filename='img/kezdo.png') }}" 
+      <img src="{{ url_for('static', filename='img/profil_kep.jpg') }}" 
            alt="Mozgásvarázsa Alapozó" 
            class="hero-image img-fluid">
     </div>
