--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,12 +24,15 @@ blockquote {
   padding-left: 15px;
   color: #444;
   margin-top: 20px;
+  text-align: left; /* idézet középre */
 }
 
 blockquote footer {
-  font-size: 0.9em;
-  color: #666;
-  margin-top: 5px;
+  font-style: normal;
+  color: #444;
+  text-align: left;   /* szerző balra zárt */
+  margin-top: 8px;
+  padding-left: 10px;
 }
 /*
 .hero {
