Comment out 2019 and 2022 milestones in rolunk.html
Comment out personal milestones in the timeline.

--- a/templates/rolunk.html
+++ b/templates/rolunk.html
@@ -24,8 +24,8 @@
       <li><strong>2014</strong> – Oroszlányi Benedek Elek Óvoda, Általános Iskola, Fejlesztő Nevelés-Oktatást Végző Iskola EGYMI – gyógypedagógus</li>
       <li><strong>2016</strong> – Nyelvvizsga, gyógypedagógusi diploma (tanulásban akadályozottak pedagógiája szakirány)</li>
       <li><strong>2017</strong> – Budapest III. kerületi Szent Miklós Óvoda, Általános Iskola, EGYMI, Kollégium és Gyermekotthon – gyógypedagógus</li>
-"""{%     <li><strong>2019</strong> – megszületett kisfiam</li>
-      <li><strong>2022</strong> – megszületett kislányom</li>%}"""
+<!--  <li><strong>2019</strong> – megszületett kisfiam</li>-->
+<!--  <li><strong>2022</strong> – megszületett kislányom</li>%}-->
       <li><strong>2024</strong> – Alapozó mozgásfejlesztő képesítés</li>
       <li><strong>2024–</strong> – Tatai Vaszary János Általános Iskola – gyógypedagógus, SNI és BTMN tanulók komplex fejlesztése</li>
     </ul>
@@ -35,11 +35,9 @@
 {% endblock %}
 
 
-{#
-"""
+<!--
 {% extends 'base.html' %}
 {% block content %}
 <h2>Rólunk</h2><p>Itt kerül majd a részletes bemutatkozás, célok, módszerek, szakmai háttér.</p>
 {% endblock %}
-"""
-#}
+-->
