--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,11 +20,12 @@
 
 blockquote {
   font-style: italic;
-  border-left: 4px solid #87CEFA;
-  padding-left: 15px;
+  border-left: none; /*4px solid #87CEFA;*/ /* nincs kék függőleges vonal */
+  padding-left: 0;/* ne legyen beljebb tolva */
   color: #444;
   margin-top: 20px;
   text-align: left; /* idézet középre */
+  background: none; /* ne legyen kék háttér vagy kiemelés */
 }
 
 blockquote footer {
@@ -32,7 +33,8 @@ blockquote footer {
   color: #444;
   text-align: left;   /* szerző balra zárt */
   margin-top: 8px;
-  padding-left: 10px;
+  padding-left: 0;
+  background: none; /* ne legyen háttér */
 }
 /*
 .hero {
