Update footer with correct social media links
Updated footer links to point to actual social media profiles.

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,11 @@
 <footer>
   <p>© 2025 Mozgásvarázsa Alapozó</p>
   <p>
+ <a href="https://www.facebook.com/profile.php?id=61582547519821" target="_blank">Facebook</a> |
+    <a href="https://www.instagram.com/mozgasvarazsaalapozo/" target="_blank">Instagram</a> |
+    <a href="https://www.tiktok.com/@mozgasvarazsaalapozo?is_from_webapp=1&sender_device=pc" target="_blank">TikTok</a> |
+    <a href="https://www.youtube.com/@Mozgasvarazsa-alapozo" target="_blank">YouTube</a>
+      
     <a href="#">Facebook</a> |
     <a href="#">Instagram</a> |
     <a href="#">TikTok</a> |
