--- a/templates/kapcsolat.html
+++ b/templates/kapcsolat.html
@@ -12,7 +12,7 @@
   <div class="contact-info mt-4">
     <p><strong>Tallér Erika Ágnes</strong></p>
     <p>📱 <strong>Telefon:</strong> <a href="tel:+36705977117">+36 70 597 7117</a></p>
-    <p>📧 <strong>E-mail:</strong> <a href="mailto:alapozo.taller@gmail.com">alapozo.taller@gmail.com</a></p>
+    <p>📧 <strong>E-mail:</strong> <a href="mailto:mozgasvarazsaalapozo@gmail.com">mozgasvarazsaalapozo@gmail.com</a></p>
     <p>📍 <strong>Helyszín:</strong> Első Lépések Fejlesztő Központ<br>
       2800 Tatabánya, Aradi vértanúk tere 2. Fsz.
     </p>
