--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         <li class="nav-item"><a class="nav-link" href="/">Kezdőlap</a></li>
         <li class="nav-item"><a class="nav-link" href="/rolunk">Rólam</a></li>
         <li class="nav-item"><a class="nav-link" href="/szolgaltatasok">Szolgáltatások</a></li>
+        <li class="nav-item"><a class="nav-link" href="/arak">Árak</a></li>
         <li class="nav-item"><a class="nav-link" href="/kapcsolat">Kapcsolat</a></li>
       </ul>
     </div>
